crates/cadenza-compiler/test-data/semantics/literals-error-empty-character-literal.expected
error: empty character literal
 --> test.cdz:1:1
  |
1 | ''
  | ^^ this character literal is empty
  |
  = note: character literals must contain exactly one character
  = help: try using \"\" for an empty string instead